--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,20 @@
 body {
-  background-image: url(https://www.kimp.io/wp-content/uploads/2022/01/Green-Color-Psychology.jpg);
+  background-image: url(https://a.rgbimg.com/users/x/xy/xymonau/300/p85Sx0E.jpg);
   background-size: cover;
+  color: black
 }
+
 .navbar {
   display: flex;
   width: 100vw;
-  height: 70px;
-  background-color: rgba(55, 0, 255, 0.65);
+  height: 100px;
+  background-color: rgba(55, 0, 255, 0.452);
   align-items: center;
 }
 .navbar a {
-  color: black;
+  color: rgb(14, 13, 13);
   text-decoration: none;
-  font-size: 20px;
+  font-size: 30px;
   padding: 20px;
 }
 .navbar :nth-child(3) {
@@ -31,12 +33,13 @@ body {
   margin: 100px;
 }
 .fest_container img {
-  width: 600px;
+  width: 700px;
 }
 .fest_container p {
   width: 80ch;
   margin-top: 20px;
   padding: 10px;
+  font-size: 100%;
 }
 .fest_container {
   background-color: rgb(202, 215, 226);
@@ -57,14 +60,15 @@ body {
   justify-items: center;
 }
 .contact_form {
-  background-color: aquamarine;
+  background-color: rgb(191, 101, 188);
   display: flex;
   flex-direction: column;
   width: 400px;
-  height: 400px;
+  height: 450px;
+  padding: 50px;
   justify-content: center;
   border-radius: 50px;
-  margin-top: 50px;
+  border-style: double;
 }
 form label,
 input,
@@ -79,31 +83,45 @@ form textarea {
 }
 
 .contact_container {
-  height: calc(100vh - 70px);
+  height: calc(80vh - 40px);
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-radius: 50px;
+ 
+    
 }
 form {
-  margin: 50px auto;
+  margin: 70px auto;
 }
 .label {
   display: inline-block;
-  padding: 20px;
-  font-size: 20px;
+  padding: 50px;
+  font-size: 30px;
 }
 .btn {
   margin-top: 10px;
   width: 100px;
+ 
+  
 }
 .logo {
-  width: 50px;
+  width: 90px;
   margin-left: 20px;
 }
 .contact_container {
   font-size: large;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  padding: 50px
+  
+}
+header{
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(60, 0, 255, 0.437);
+  font-size: 250%;
 }
