--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 body {
   background-image: url(https://a.rgbimg.com/users/x/xy/xymonau/300/p85Sx0E.jpg);
   background-size: cover;
-  color: black
+  color: black;
 }
 
 .navbar {
   display: flex;
   width: 100vw;
   height: 100px;
-  background-color: rgba(55, 0, 255, 0.452);
+  background-color: rgba(55, 0, 255, 0.085);
   align-items: center;
 }
 .navbar a {
@@ -65,7 +65,7 @@ body {
   flex-direction: column;
   width: 400px;
   height: 450px;
-  padding: 50px;
+  
   justify-content: center;
   border-radius: 50px;
   border-style: double;
@@ -77,20 +77,22 @@ textarea {
   width: 200px;
   border-radius: 5px;
   outline: none;
+  
 }
 form textarea {
   width: 300px;
 }
 
 .contact_container {
-  height: calc(80vh - 40px);
+  padding:20px;
+  height: calc(90vh - 40px);
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
- 
-    
+  font-family: "Courier New", Courier, monospace;
+  padding: 50px;
 }
 form {
   margin: 70px auto;
@@ -103,20 +105,13 @@ form {
 .btn {
   margin-top: 10px;
   width: 100px;
- 
-  
 }
 .logo {
   width: 90px;
   margin-left: 20px;
+  margin-top: 50px;
 }
-.contact_container {
-  font-size: large;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  padding: 50px
-  
-}
-header{
+header {
   width: 100%;
   height: 70px;
   display: flex;
@@ -124,4 +119,29 @@ header{
   align-items: center;
   background: rgba(60, 0, 255, 0.437);
   font-size: 250%;
+  font-family: "Courier New", Courier, monospace;
+  color: aliceblue;
+}
+h1 {
+  padding: 20px;
+  font-family: "Courier New", Courier, monospace;
+}
+h2 {
+  padding: 40px;
+  font-family: "Courier New", Courier, monospace;
+}
+.contact_container h1,p{
+  padding: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: larger;
+}
+img{
+  display: inline-block;
+  margin: 25px 10px;
+  width: 505px;
+  
+}
+video{
+  align-items: center;
+ 
 }
